--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -1,1 +1,34 @@
 <h3>Embedded Forms Quickstart</h3>
+<form role="form" name="variablesForm">
+
+    <!-- Firstname -->
+    <div class="form-group">
+        <label for="inputFirstname">First Name</label>
+        <div class="controls">
+          <input class="form-control"
+                required
+                type="text"
+                cam-variable-name="firstname"
+                cam-variable-type="String"
+                placeholder="John"
+                ng-minlength="2"
+                ng-maxlength="20" />
+        </div>
+      </div>
+
+      <!-- Lastname -->
+      <div class="form-group">
+        <label for="inputLastname">Last Name</label>
+        <div class="controls">
+          <input class="form-control"
+                required
+                type="text"
+                cam-variable-name="lastname"
+                cam-variable-type="String"
+                placeholder="Doe"
+                ng-minlength="2"
+                ng-maxlength="20" />
+        </div>
+      </div>
+
+</form>
