--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -58,6 +58,18 @@
       </div>
 
       <div class="form-group">
+          <label for="inputProductSelection">Product selection</label>
+          <select class="form-control"
+                cam-variable-name="productSelection"
+                cam-variable-type="String" >
+            <option selected>Choose the product...</option>
+            <option value="1">GLA</option>
+            <option value="2">SLA</option>
+            <option value="3">...</option>
+          </select>
+      </div>
+
+      <div class="form-group">
         <label for="inputCoveredPeriod">Covered period</label>
         <div class="controls">
           <input class="form-control"
