--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -59,7 +59,7 @@
 
       <div class="form-group">
           <label for="inputProductSelection">Product selection</label>
-          <select class="form-control"
+          <select class="custom-select"
                 cam-variable-name="productSelection"
                 cam-variable-type="String" >
             <option selected>Choose the product...</option>
