--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -35,7 +35,7 @@
             </span>
         </p>
         <script cam-script type="text/form-script">
-          $scope.open = function($event,$dateFieldOpened) {
+          $scope.open = function($event, dateFieldOpened) {
             $event.preventDefault();
             $event.stopPropagation();
         
