--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -89,6 +89,7 @@
 
       <div class="form-group">
           <label for="inputProductSelection">Product selection</label>
+          <div class="controls"></div>
           <select class="custom-select"
                 cam-variable-name="productSelection"
                 cam-variable-type="String" >
@@ -97,6 +98,7 @@
             <option value="2">SLA</option>
             <option value="3">...</option>
           </select>
+          </div>
       </div>
 
       <div class="form-group">
