--- a/src/main/resources/static/forms/CamundaStartForm.html
+++ b/src/main/resources/static/forms/CamundaStartForm.html
@@ -89,7 +89,7 @@
 
       <div class="form-group">
           <label for="inputProductSelection">Product selection</label>
-          <div class="controls"></div>
+          <div class="controls">
           <select class="custom-select"
                 cam-variable-name="productSelection"
                 cam-variable-type="String" >
